--- a/android_challenge_2/app/src/main/res/layout/rv_row.xml
+++ b/android_challenge_2/app/src/main/res/layout/rv_row.xml
@@ -5,52 +5,46 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         card_view:cardCornerRadius="4dp"
-        android:layout_margin="8dp" card_view:cardUseCompatPadding="true">
+        android:layout_margin="4dp" card_view:cardUseCompatPadding="true">
 
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                 xmlns:tools="http://schemas.android.com/tools"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="wrap_content"
-                                                 android:layout_margin="8dp">
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+    >
 
 
         <ImageView
                 android:id="@+id/imageDeal"
-                android:layout_width="87dp"
-                android:layout_height="94dp"
-                android:layout_marginStart="@dimen/text_margin_standard"
-                android:layout_marginTop="@dimen/text_margin_standard"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@mipmap/ic_launcher"
-                android:layout_marginLeft="@dimen/text_margin_standard" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="@dimen/text_margin_standard" app:layout_constraintVertical_bias="0.0"
-                android:contentDescription="@string/deal_picture_content_description"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:contentDescription="@string/deal_picture_content_description"
+                android:layout_alignParentStart="true" android:layout_alignParentTop="true"/>
 
         <TextView
                 android:id="@+id/tvTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/text_margin_standard"
-                android:textSize="@dimen/title_large"
-                app:layout_constraintStart_toEndOf="@+id/imageDeal"
-                android:layout_marginLeft="@dimen/text_margin_standard"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="@dimen/text_margin_standard"
-        />
+                android:textSize="14sp"
+                android:text="Sweden - Stockhom"
+                android:layout_alignParentStart="true" android:layout_marginStart="20dp"
+                android:textColor="@android:color/background_light" android:layout_alignParentBottom="true"
+                android:layout_marginBottom="20dp"
+                android:textStyle="bold" android:layout_alignParentLeft="true" android:layout_marginLeft="20dp"/>
 
         <TextView
                 android:id="@+id/tvPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorAccent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp" android:layout_marginRight="@dimen/text_margin_standard"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="@dimen/text_margin_standard" android:textSize="@dimen/text_small"/>
+                android:textColor="@android:color/background_light"
+                android:textSize="14sp"
+                android:text="10000 SEK"
+                android:textStyle="bold"
+                android:layout_alignTop="@+id/tvTitle" android:layout_alignParentEnd="true"
+                android:layout_marginEnd="20dp"/>
 
-    </android.support.constraint.ConstraintLayout>
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
